# conhugo-agents-flow

./: .dockerignore  ADOPTION_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  container.yml  pr-policy.yml  publish.yml  release.yml
docs/: glosario-es.md  guia-adopcion-es.md
src/agent_bus/: cli.py  locking.py  repo.py  store.py  types.py
src/agent_bus/templates/agents/: README.md  protocol.md
src/agent_bus/templates/agents/templates/: message-template.json
src/agent_bus/templates/docs_coordination/: README.md  active-context.md  decision-log.md  session-handoff.md
src/agent_bus/templates/githooks/: pre-commit
tests/: test_cli.py
